Spostati dei blocchi tra i controller

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,7 +67,7 @@
   </nav>
 
   <div class="container my-5">
-	<h1>Consulta l'archivio</h1>
+	<h1 class="text-center">Archivio film</h1>
 	<div>
 		<a href="/movie">Elenco Film</a>
 	</div>
