--- a/src/main/resources/templates/movies.html
+++ b/src/main/resources/templates/movies.html
@@ -16,10 +16,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
 <body>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
- <nav class="navbar navbar-expand-lg bg-body-tertiary" >
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
 	
 	<div class="container-fluid" style="max-width: 1500px;">
 	  <a class="navbar-brand" href="/">SiwMovie</a>
@@ -66,7 +65,7 @@
   </nav>
 
   <div class="container my-5">
-	<div class="container"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
+	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
 	
 	<div th:if="${!movies.isEmpty()}" class="container my-3">
 		<div class="row">
