--- a/src/main/resources/templates/artists.html
+++ b/src/main/resources/templates/artists.html
@@ -1,31 +1,100 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 
 <head>
-	<title>Artisti</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+	<title>
+		SiwMovie - Film
+	</title>
+	
 </head>
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Film</title>
+	 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/stile2.css" />
+</head>
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
+	
+	<div class="container-fluid" style="max-width: 1500px;">
+	  <a class="navbar-brand" href="/">SiwMovie</a>
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarScroll">
+		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/">Home</a>
+		  </li>
+		  
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  FIlm
+			</a>
+			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="#">Azione</a></li>
+			  <li><a class="dropdown-item" href="#">Horror</a></li>
+			</ul>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="/artists" >Artisti</a>
+		  </li>
+		</ul>
+		
+		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
+		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
+		  <button class="btn btn-outline-success" type="submit">Cerca</button>
+		</form>
+		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+			<span>Ciao, </span>
+			<span th:text="${#request.userPrincipal.principal.username}"> </span>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
 		</div>
 		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
 		</div>
-	</header>
+	  </div>
+	
+	</div>
+  </nav>
 
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%"/></a></div>
-	<h1>Artisti</h1>
-	<div th:if="${artists==null || artists.isEmpty()}">Non ci sono artisti nel sistema</div>
-	<ul>
-		<li th:each="artist : ${artists}">
-			<a th:href="@{'/artist' + '/' + ${artist.id}}"
-				th:text="${artist.name} + ' ' + ${artist.surname}">Dino Risi</a>
-		</li>
-	</ul>
+  <div class="container my-5" th:if="${!artists.isEmpty()}"  >
+	<h1 class="text-center" style="margin-bottom: 1em;">Artisti</h1>
+	
+	
+	  
+	  
+	  
+	  <div class="row row-cols-1 row-cols-md-2 g-4">
+		<div class="card mb-3 text-bg-secondary border-primary" th:each="artist, artistStat : ${artists}" style="max-width: 540px;">
+			<div class="row g-0" >
+			  <div class="col-md-4" id="img-container">
+				<img id="artist-card" th:src="${'\'+artist.image.imagePath}" class="img-fluid rounded-circle"  alt="...">
+			  </div>
+			  
+			  <div class="col-md-8">
+				<div class="card-body">
+				  <h5 class="card-title" th:text="${artist.name +' '+ artist.surname}">Nome artista</h5>
+				  <p class="card-text" th:text="${artist.biography}" >Bio</p>
+				  <a th:href="@{|/artist/${artist.id}|}" class="btn btn-primary">Dettagli</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+	  </div>
+	  
+	  
+	  
+	  
+  </div>
+
 </body>
 
 </html>
