--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
 			</ul>
 		  </li>
 		  <li class="nav-item">
-			<a class="nav-link" href="/artist" >Artisti</a>
+			<a class="nav-link" href="/artists" >Artisti</a>
 		  </li>
 		</ul>
 		
@@ -70,19 +70,19 @@
 	<h1 class="text-center">I migliori 3!</h1>
 	
 	<div th:if="${!movies.isEmpty()}" class="container my-3">
-		<div class="row" >
-		  <div th:each="movie, movieStat : ${movies}" class="col-md-4 col-sm-6 " id="riga"  >
-			<div class="card mb-3"style="width: 18rem; ">
-			  <img th:src="${movie.primaryImage.imagePath}" class="card-img-top " id = "moviecard" alt="Movie Poster">
-			  <div class="card-body">
-				<h5 th:text="${movie.title}" class="card-title"></h5>
-				<p th:text="${movie.year}" class="card-text"></p>
-				<p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
-				<a th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
+		<div class="row">
+			<div th:each="movie, movieStat : ${movies}" class="col-md-4 col-sm-6">
+			  <div class="card mb-3" style="max-width: 80%;">
+				<img th:src="${'\'+movie.primaryImage.imagePath}" class="card-img-top " id="moviecard" alt="Movie Poster">
+				<div class="card-body">
+				  <h5 th:text="${movie.title}" class="card-title"></h5>
+				  <p th:text="${movie.year}" class="card-text"></p>
+				  <p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
+				  <a th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
+				</div>
 			  </div>
 			</div>
 		  </div>
-		</div>
 	  </div>	  
 	  
 </body>
