--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html>
+<html data-bs-theme="dark">
+
+<head>
+	<title>
+		SiwMovie - Film
+	</title>
+	<link rel="stylesheet" href="/css/stile2.css" />
+</head>
+
+<!DOCTYPE html>
 <html>
   <head>
     <title>Film</title>
@@ -6,38 +16,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
-
 <body>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
 	
-	<nav class="navbar "style="background-color: #e3f2fd;">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img src="/images/video.png" alt="Logo" width="50" height="44" class="d-inline-block align-text-center">
-      
-    </a>
-    <h1 class="mx-auto">SiwMovie</h1>
-    <div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
+	<div class="container-fluid" style="max-width: 1500px;">
+	  <a class="navbar-brand" href="/">SiwMovie</a>
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarScroll">
+		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/">Home</a>
+		  </li>
+		  
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  FIlm
+			</a>
+			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="#">Azione</a></li>
+			  <li><a class="dropdown-item" href="#">Horror</a></li>
+			</ul>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="/artists" >Artisti</a>
+		  </li>
+		</ul>
+		
+		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
+		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
+		  <button class="btn btn-outline-success" type="submit">Cerca</button>
+		</form>
+		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+			<span>Ciao, </span>
+			<span th:text="${#request.userPrincipal.principal.username}"> </span>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
 		</div>
 		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
 		</div>
-  </div>
-</nav>
-
+	  </div>
+	
+	</div>
+  </nav>
  
-<div class="container">
-  <h1>Dettagli Film</h1>
-    <div th:if="${movie}">
-        <span th:text="${movie.title}">Up!</span>
-        <span th:text="'(' + ${movie.year} + ')'">2000</span>
-        <span><img width="5%" th:src=${movie.urlImage} /></span>
-    </div>
-    <div th:unless="${movie}">Non esiste</div>
+<div th:if="${movie}" th:style="'background-image:url('+'/' + ${movie.primaryImage.imagePath} + ');'" class="container my-5" id="movie-container" style="padding-top: 2em;" >
+  <div class="container-movie">
+    <h1 th:text="${movie.title}">Up!</h1>
+    <p th:text="${movie.year}">2001</p>
+    <img class="img-fluid" th:src="${'/'+movie.primaryImage.imagePath}">
+  </div>
 </div>
-    
+
+
+
     
   </body>
 </html>
