--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -69,20 +69,19 @@
 	<div id="black-blurred"></div>
 	<div class="container my-5" id="movie">
 	  <h1 th:text="${movie.title}">Up!</h1>
-	  <p th:text="${movie.year}">2001</p>
+	  <h5 th:text="${movie.year}">2001</h5>
 	  <div class="flex-container-movie">
-		<img class="img-fluid flex-item" th:src="${'/'+movie.primaryImage.imagePath}">
-		<div id="flex-item" class="carousel slide flex-item">
+		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+movie.primaryImage.imagePath}">
+		<div id="carouselExample" class="carousel slide flex-item">
 			<div class="carousel-inner">
-			  <div class="carousel-item active">
-				<img src="/images/The_founder.jpg" class="d-block w-100" alt="...">
-			  </div>
-			  <div class="carousel-item">
-				<img src="..." class="d-block w-100" alt="...">
-			  </div>
-			  <div class="carousel-item">
-				<img src="..." class="d-block w-100" alt="...">
-			  </div>
+				<div th:each="image, imageStat : ${images}">
+					<div th:if="${imageStat.index == 0}" class="carousel-item active">
+						<img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="...">
+					</div>
+					<div th:unless="${imageStat.index == 0}" class="carousel-item">
+						<img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="...">
+					</div>
+				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
 			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -93,6 +92,7 @@
 			  <span class="visually-hidden">Next</span>
 			</button>
 		  </div>
+		  
 
 	  </div>
 	  
@@ -100,7 +100,7 @@
 	</div>
   </div>
 
-
+  
 
     
   </body>
