--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -1,28 +1,91 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Artista</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+<html data-bs-theme="dark">
+
+<head>
+	<title>
+		SiwMovie - Film
+	</title>
+	<link rel="stylesheet" href="/css/stile2.css" />
 </head>
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Film</title>
+	 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
+	
+	<div class="container-fluid" style="max-width: 1500px;">
+	  <a class="navbar-brand" href="/">SiwMovie</a>
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarScroll">
+		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/">Home</a>
+		  </li>
+		  
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  FIlm
+			</a>
+			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="#">Azione</a></li>
+			  <li><a class="dropdown-item" href="#">Horror</a></li>
+			</ul>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="/artists" >Artisti</a>
+		  </li>
+		</ul>
+		
+		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
+		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
+		  <button class="btn btn-outline-success" type="submit">Cerca</button>
+		</form>
+		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+			<span>Ciao, </span>
+			<span th:text="${#request.userPrincipal.principal.username}"> </span>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
 		</div>
 		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
 		</div>
-	</header>
+	  </div>
+	
+	</div>
+  </nav>
+ 
+  <div th:if="${artist}"  id="movie-container" style="padding-top: 2em;">
+	<div id="blurred" th:style="'background-image: url(/'+${artist.image.imagePath}+');'" ></div>
+	<div id="black-blurred"></div>
+	<div class="container my-5" id="movie">
+	  <h1 th:text="${artist.name}">Christopher</h1>
+	  <h2 th:text="${artist.surname}">Nolan</h2>
+	  <div class="d-flex p-2">
+		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+artist.image.imagePath} "style="margin-left:0px;">
+		  
+		  
 
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%"/></a></div>
-    <h1>Dettagli Artista</h1>
-    <div th:if="${artist}">
-        <span th:text="${artist.name} + ' ' + ${artist.surname}">Dino Risi</span>
-        <span th:text="'(' + ${artist.dateOfBirth} + ')'">20/20/2000</span>
-        <span><img width="5%" th:src=${artist.urlOfPicture} /></span>
-    </div>
-    <div th:unless="${artist}">Non esiste</div>
+	  </div>
+	
+	  <div class="container">
+
+		
+	  </div>
+	</div>
+  </div>
+
+  
+
+    
   </body>
 </html>
