--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -14,6 +14,7 @@
     <title>Film</title>
 	 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
@@ -72,20 +73,79 @@
 	  <h2 th:text="${artist.surname}">Nolan</h2>
 	  <div class="d-flex p-2">
 		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+artist.image.imagePath} "style="margin-left:0px;">
-		  
+	  <div style="padding-left: 2%;">
+		<h1>Bio</h1>
+		<p class="lead " th:text="${artist.biography}"></p>
+	  </div>
+		
 		  
 
 	  </div>
 	
 	  <div class="container">
-
-		
-	  </div>
-	</div>
+			<div class="container">
+				<h1 th:if="${!topDirectorMovies.isEmpty()}">Principali Opere da Regista</h1>
+				<h1 th:unless="${!topDirectorMovies.isEmpty()}">Nessun Opera da Regista</h1>
+			</div>
+			<div th:if="${!topDirectorMovies.isEmpty()}" class="container my-3">
+				<div class="card-group">
+				<div th:each="movie, movieStat : ${topDirectorMovies}" class="card mb-3" style="max-width: 540px;">
+					<div class="row g-0">
+					  <div class="col-md-4">
+						<a th:href="@{|/movie/${movie.id}|}" class="link">
+							<img th:src="${'\'+movie.primaryImage.imagePath}" class="img-fluid rounded-start" alt="...">
+						</a>
+					  </div>
+					  <div class="col-md-8">
+						<div class="card-body">
+							<a th:href="@{|/movie/${movie.id}|}" class="link">
+						  <h5 th:text="${movie.title}" class="card-title">Titolo Film</h5></a>
+						  <p th:text="${movie.year}" class="card-text">1980</p>
+							<span th:text="' '+${movie.rating}"class="fa fa-star checked"></span>
+						  
+						</div>
+					  </div>
+					</div>
+				  </div>
+				  
+				</div>
+				  
+			  </div>
+			  
   </div>
-
-  
-
+  <div class="container">
+	<div class="container">
+		<h1 th:if="${!topActorMovies.isEmpty()}" >Principali Opere da Attore</h1>
+		<h1 th:unless="${!topActorMovies.isEmpty()}" >Nessun Opera da Attore</h1>
+	</div>
+	<div th:if="${!topActorMovies.isEmpty()}" class="container my-3">
+		<div class="card-group">
+		<div th:each="movie, movieStat : ${topActorMovies}" class="card mb-3" style="max-width: 540px;">
+			<div class="row g-0">
+			  <div class="col-md-4">
+				<a th:href="@{|/movie/${movie.id}|}" class="link">
+					<img th:src="${'\'+movie.primaryImage.imagePath}" class="img-fluid rounded-start" alt="...">
+				</a>
+			  </div>
+			  <div class="col-md-8">
+				<div class="card-body">
+					<a th:href="@{|/movie/${movie.id}|}" class="link">
+				  <h5 th:text="${movie.title}" class="card-title">Titolo Film</h5></a>
+				  <p th:text="${movie.year}" class="card-text">1980</p>
+					<span th:text="' '+${movie.rating}"class="fa fa-star checked"></span>
+				  
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  
+		</div>
+		  
+	  </div>
+	  
+</div>
+</div>
+</div>
     
   </body>
 </html>
