--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -14,6 +14,7 @@
     <title>Film</title>
 	 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
@@ -72,14 +73,14 @@
 	<div class="container my-5" id="movie">
 	  <h1 th:text="${movie.title}">Up!</h1>
 	  <h5 th:text="${movie.year}">2001</h5>
-	  <h5 th:text="${'Valutazione: '+movie.rating}">2001</h5>
+	  <span th:text="' '+${movie.rating}"class="fa fa-star checked">4.2</span>
 	  <div class="d-flex p-2">
 		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+movie.primaryImage.imagePath} ">
-		<div id="carouselExample" class="carousel slide flex-item" data-bs-ride="true" style="height: 500px;">
+		<div id="carouselExample" class="carousel slide flex-item fixed-carousel" data-bs-ride="true" style="height: 500px; ">
 			<div class="carousel-inner">
 			  <div th:each="image, imageStat : ${images}">
 				<div th:if="${imageStat.index == 0}" class="carousel-item active">
-				  <img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="...">
+				  <img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="..." style="background-size: cover;">
 				</div>
 				<div th:unless="${imageStat.index == 0}" class="carousel-item">
 				  <img th:src="${'/'+image.imagePath}" class="d-block w-100" alt="...">
@@ -102,7 +103,7 @@
 	
 	  <div class="container">
 
-		<h2 th:if="${movie.director}" th:text="${'Regia: '+movie.director.name}">Regia: Christopher Nolan</h2>
+		<h2 th:if="${movie.director}" th:text="${'Regia: '+movie.director.name+' '+movie.director.surname}">Regia: Christopher Nolan</h2>
 		<h2 th:unless="${movie.director}" th:text="${'Nessun Regista'}">Regia: Christopher Nolan</h2>
 		<div class="container my-5 " th:if="${!movie.actors.isEmpty()}" >
 			<h1 class="" style="margin-bottom: 1em;">Cast</h1>
@@ -116,14 +117,16 @@
 					  
 					  <div class="col-md-8">
 						<div class="card-body">
-						  <h5 class="card-title" th:text="${artist.name +' '+ artist.surname}">Nome artista</h5>
-						  
-						  <a th:href="@{|/artist/${artist.id}|}" class="btn btn-primary">Dettagli</a>
+							<a th:href="@{|/artist/${artist.id}|}" class="link">
+						  <h5 class="card-title" th:text="${artist.name}">Nome artista</h5>
+						  <h5 class="card-title" th:text="${artist.surname}">Cognome artista</h5>
+						  </a>
 						</div>
 					  </div>
 					</div>
 				  </div>
 			  </div>
+			  
 			  
 			  
 			  
