--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -73,7 +73,13 @@
 	<div class="container my-5" id="movie">
 	  <h1 th:text="${movie.title}">Up!</h1>
 	  <h5 th:text="${movie.year}">2001</h5>
-	  <span th:text="' '+${movie.rating}"class="fa fa-star checked">4.2</span>
+	  <div class="d-flex p-2 justify-content-between align-items-center">
+		<span th:text="' '+${movie.rating}"class="fa fa-star checked" style="font-size: xx-large;">4.1</span>
+
+		<h3 th:if="${review}" th:text="'La tua valutazione: '+${review.rating}" href="#" >La tua Valutazione: 3</h3>
+
+	  </div>
+	  
 	  <div class="d-flex p-2">
 		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+movie.primaryImage.imagePath} ">
 		<div id="carouselExample" class="carousel slide flex-item fixed-carousel" data-bs-ride="true" style="height: 500px; ">
@@ -125,13 +131,9 @@
 					  </div>
 					</div>
 				  </div>
-			  </div>
-			  
-			  
-			  
-			  
-			  
+			  </div>  
 		  </div>
+		  
 	  </div>
 	</div>
   </div>
