--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -71,12 +71,26 @@
 	<div id="blurred" th:style="'background-image: url(/'+${movie.primaryImage.imagePath}+');'" ></div>
 	<div id="black-blurred"></div>
 	<div class="container my-5" id="movie">
-	  <h1 th:text="${movie.title}">Up!</h1>
-	  <h5 th:text="${movie.year}">2001</h5>
+		<div class="flex-container-orizzontale">
+			<div class="flex-container-verticale">
+				<h1 th:text="${movie.title}">Up!</h1>
+	  			<h5 th:text="${movie.year}">2001</h5>
+			</div>
+			<div class="flex-container-verticale c" style="margin-left: auto; padding-right: 2%;" >
+				<h3>Valutazione</h3>
+				<h5 th:text="' '+${movie.rating}"class="fa fa-star checked" style="font-size: x-large; " >2.1</h5>
+			</div>
+			<div class="flex-container-verticale c">
+				<h3 >La tua Valutazione</h3>
+				<h5 th:if="${review}"th:text="' '+${review.rating}"class="fa fa-star checked" style="font-size: x-large;">4.1</h5>
+				<h4 th:text="Valuta" class="text-primary" ><a th:unless="${review}" class="link-opacity-100"></a>Valuta</h4>
+			</div>
+		</div>
+	  
 	  <div class="d-flex p-2 justify-content-between align-items-center">
-		<span th:text="' '+${movie.rating}"class="fa fa-star checked" style="font-size: xx-large;">4.1</span>
+		
 
-		<h3 th:if="${review}" th:text="'La tua valutazione: '+${review.rating}" href="#" >La tua Valutazione: 3</h3>
+	
 
 	  </div>
 	  
@@ -108,8 +122,9 @@
 	  </div>
 	
 	  <div class="container">
-
-		<h2 th:if="${movie.director}" th:text="${'Regia: '+movie.director.name+' '+movie.director.surname}">Regia: Christopher Nolan</h2>
+		<a th:if="${movie.director}" th:href="@{|/artist/${movie.director.id}|}" class="link">
+			<h2 th:text="${'Regia: '+movie.director.name+' '+movie.director.surname}">Regia: Christopher Nolan</h2>
+		</a>
 		<h2 th:unless="${movie.director}" th:text="${'Nessun Regista'}">Regia: Christopher Nolan</h2>
 		<div class="container my-5 " th:if="${!movie.actors.isEmpty()}" >
 			<h1 class="" style="margin-bottom: 1em;">Cast</h1>
