--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -12,7 +12,7 @@
 <html>
   <head>
     <title>Film</title>
-	 <meta charset="utf-8">
+	 <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -83,7 +83,16 @@
 			<div class="flex-container-verticale c">
 				<h3 >La tua Valutazione</h3>
 				<h5 th:if="${review}"th:text="' '+${review.rating}"class="fa fa-star checked" style="font-size: x-large;">4.1</h5>
-				<h4 th:text="Valuta" class="text-primary" ><a th:unless="${review}" class="link-opacity-100"></a>Valuta</h4>
+				<div th:if="${#request.userPrincipal}">
+					<a th:unless="${review}" th:href="${movie.id}+'/'+writeReview" ><button type="button" class="btn btn-success">Valuta</button></a>
+					
+				</div>
+				<div th:unless="${#request.userPrincipal}">
+					<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+						Valuta
+					  </button>
+						
+				</div>
 			</div>
 		</div>
 	  
@@ -95,6 +104,7 @@
 	  </div>
 	  
 	  <div class="d-flex p-2">
+		
 		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+movie.primaryImage.imagePath} ">
 		<div id="carouselExample" class="carousel slide flex-item fixed-carousel" data-bs-ride="true" style="height: 500px; ">
 			<div class="carousel-inner">
@@ -141,19 +151,43 @@
 							<a th:href="@{|/artist/${artist.id}|}" class="link">
 						  <h5 class="card-title" th:text="${artist.name}">Nome artista</h5>
 						  <h5 class="card-title" th:text="${artist.surname}">Cognome artista</h5>
+						  
 						  </a>
 						</div>
 					  </div>
 					</div>
 				  </div>
-			  </div>  
+			  </div> 
+			   
 		  </div>
 		  
 	  </div>
+	  
 	</div>
   </div>
 
+  <!-- Button trigger modal -->
+
   
+  <!-- Modal -->
+  <div class="modal fade " id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+	<div class="modal-dialog">
+	  <div class="modal-content">
+		<div class="modal-header">
+		  <h1 class="modal-title fs-5" id="staticBackdropLabel">Account Richiesto</h1>
+		  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-body">
+		  Per scrivere una recensione &egrave richiesto un account
+		</div>
+		<div class="modal-footer">
+		  <!--<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Chiudi</button>-->
+		  <a href="/register"><button type="button" class="btn btn-primary">Registrati</button></a>
+		  <a href="/login"><button type="button" class="btn btn-primary">Login</button></a>
+		</div>
+	  </div>
+	</div>
+  </div>
 
     
   </body>
