Aggiunta pagina foundmovies

--- a/src/main/resources/templates/admin/indexAdmin.html
+++ b/src/main/resources/templates/admin/indexAdmin.html
@@ -78,18 +78,30 @@
 	</nav>
 	<div class="container my-5 ">
 		<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" /></div>
-		<div class="container my-5 rounded-pill" style="background-color: #323436">
+		<div class="container my-5 rounded" style="background-color: #323436">
 			<h1 style="text-align:center">Pannello di Controllo Amministratore</h1>
-			<div class="d-flex flex-row mb-3">
-				<div class="d-flex flex-column mb-3">
-					<div class="p-2"></div>
-					<div class="p-2">Flex item 2</div>
-					<div class="p-2">Flex item 3</div>
+			<div class="d-flex flex-row mb-3  ">
+				<div class="d-flex flex-column mb-3 align-items-center">
+					<div class="p-2">
+						<h1>Operazioni film</h1>
+					</div>
+					<div class="p-2">
+						<a href="/admin/formNewMovie"><button type="button" class="btn btn-primary">Aggiungi Nuovo Film</button></a>
+					</div>
+					<div class="p-2">
+						<button type="button" class="btn btn-primary">Modifica Film</button>
+					</div>
 				</div>
-				<div class="d-flex flex-column mb-3">
-					<div class="p-2"></div>
-					<div class="p-2">Flex item 2</div>
-					<div class="p-2">Flex item 3</div>
+				<div class="d-flex flex-column mb-3 align-items-center">
+					<div class="p-2">
+						<h1>Operazioni Artisti</h1>
+					</div>
+					<div class="p-2">
+						<button type="button" class="btn btn-primary">Aggiungi Nuovo Attore</button>
+					</div>
+					<div class="p-2">
+						<button type="button" class="btn btn-primary">Modifica Attore</button>
+					</div>
 				</div>
 			</div>
 
