--- a/src/main/resources/templates/foundMovies.html
+++ b/src/main/resources/templates/foundMovies.html
@@ -1,31 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 
 <head>
-	<title>Film</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+	<title>
+		SiwMovie - Film
+	</title>
+	<link rel="stylesheet" href="/css/stile2.css" />
 </head>
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Film</title>
+	 <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+</head>
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+ <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top"  >
+	
+	<div class="container-fluid" style="max-width: 1500px;">
+	  <a class="navbar-brand" href="/">SiwMovie</a>
+	  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="navbar-toggler-icon"></span>
+	  </button>
+	  <div class="collapse navbar-collapse" id="navbarScroll">
+		<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+		  <li class="nav-item">
+			<a class="nav-link active" aria-current="page" href="/">Home</a>
+		  </li>
+		  
+		  <li class="nav-item dropdown">
+			<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+			  FIlm
+			</a>
+			<ul class="dropdown-menu">
+			  <li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
+			  <li><hr class="dropdown-divider"></li>
+			  <li><a class="dropdown-item" href="#">Azione</a></li>
+			  <li><a class="dropdown-item" href="#">Horror</a></li>
+			</ul>
+		  </li>
+		  <li class="nav-item">
+			<a class="nav-link" href="/artists" >Artisti</a>
+		  </li>
+		</ul>
+		
+		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
+		  <input class="form-control me-2"  th:value="${year}"  name="year" type="search" placeholder="Cerca un film!" aria-label="Search">
+		  <button class="btn btn-outline-success" type="submit">Cerca</button>
+		</form>
+		<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+			<span>Ciao, </span>
+			<span th:text="${#request.userPrincipal.principal.username}"> </span>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/logout">Logout</a></button>
 		</div>
 		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
+			<button class="btn btn-outline-success" type="submit"><a id="loginbutton" href="/login">Login</a></button>
 		</div>
-	</header>
+	  </div>
+	
+	</div>
+  </nav>
 
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%"/></a></div>
-	<h1>Film che soddisfano i requisiti</h1>
-	<div th:if="${movies.isEmpty()}">Non ci sono film che soddisfano i requisiti</div>
-	<ul th:if="${!movies.isEmpty()}">
-		<li th:each="movie : ${movies}">
-			<a href="movie.html" th:href="@{'/movie' + '/' + ${movie.id}}"
-				th:text="${movie.title} + ' (' + ${movie.year}+')'">Up! (2000)</a>
-		</li>
-	</ul>
+  <div class="container my-5">
+	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
+	
+	<div th:if="${!movies.isEmpty()}" class="container my-3">
+		<div class="row">
+			<div th:each="movie, movieStat : ${movies}" class="col-md-4 col-sm-6">
+			  <div class="card mb-3" style="max-width: 80%;">
+				<img th:src="${'\'+movie.primaryImage.imagePath}" class="card-img-top " id="moviecard" alt="Movie Poster">
+				<div class="card-body">
+				  <h5 th:text="${movie.title}" class="card-title"></h5>
+				  <p th:text="${movie.year}" class="card-text"></p>
+				  <p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
+				  <a th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		  
+		  
+		  
+	  </div>	  
+	  <nav aria-label="Page navigation example">
+		<ul class="pagination justify-content-center">
+		  <li class="page-item">
+			<a th:if="${page == 1}"class="page-link disabled" href="#" aria-label="Previous">
+			  <span aria-hidden="true">&laquo;</span>
+			</a>
+			<a th:unless="${page == 1}"class="page-link" th:href="@{|/movies/${page-1}|}" aria-label="Previous">
+				<span aria-hidden="true">&laquo;</span>
+			  </a>
+		  </li>
+		  <li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}" th:text="${i+1}" class="page-link active" th:href="@{|/movies/${i+1}|}"></a>
+			<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/movies/${i+1}|}"></a></li>
+		  <li class="page-item">
+			<a th:if="${page == pages}"class="page-link disabled" href="#" aria-label="Previous">
+				<span aria-hidden="true">&raquo;</span>
+			  </a>
+			  <a th:unless="${page == pages}"class="page-link" th:href="@{|/movies/${page+1}|}" aria-label="Next">
+				  <span aria-hidden="true">&raquo;</span>
+				</a>
+		  </li>
+		</ul>
+	  </nav>
 </body>
 
 </html>
