--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -43,9 +43,13 @@
 			  <li><a class="dropdown-item" href="#">Horror</a></li>
 			</ul>
 		  </li>
-		  <li class="nav-item">
+		  
+		  <li class="nav-item" >
 			<a class="nav-link" href="/artists" >Artisti</a>
 		  </li>
+		  <li class="nav-item" th:if="${isAdmin}">
+			<a class="nav-link" href="/success">Pannello di controllo </a>
+			</li>	
 		</ul>
 		
 		<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"  style="margin-right: 100px; ">
