Aggiunto supporto immagini

--- a/src/main/resources/templates/admin/indexAdmin.html
+++ b/src/main/resources/templates/admin/indexAdmin.html
@@ -89,7 +89,9 @@
 						<a href="/admin/formNewMovie"><button type="button" class="btn btn-primary">Aggiungi Nuovo Film</button></a>
 					</div>
 					<div class="p-2">
-						<button type="button" class="btn btn-primary">Modifica Film</button>
+						<a href="/admin/manageMovies">
+							<button type="button" class="btn btn-primary">Modifica Film</button>
+						</a>
 					</div>
 				</div>
 				<div class="d-flex flex-column mb-3 align-items-center">
