--- a/src/main/resources/templates/admin/formNewMovie.html
+++ b/src/main/resources/templates/admin/formNewMovie.html
@@ -1,51 +1,155 @@
 <!DOCTYPE html>
-<html>
+<html data-bs-theme="dark">
 
 <head>
 	<title>
-		New Movie
+		SiwMovie - Scrivi Recensione
 	</title>
-	<link rel="stylesheet" href="/css/stile.css" />
+	<link rel="stylesheet" href="/css/stile2.css" />
+</head>
+
+<!DOCTYPE html>
+<html>
+
+<head>
+	<title>Film</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
 <body>
-	<header>
-		<div th:if="${#request.userPrincipal}">
-			<span th:text="${#request.userPrincipal.principal.username}"></span>
-			<a href="/logout">Logout</a>
-		</div>
-		<div th:unless="${#request.userPrincipal}">
-			<a href="/login">Login</a>
-		</div>
-	</header>
-	<div><a href="/"><img src="/images/logo-siw.png" width="50%" /></a></div>
-	<h1>Aggiungi un film</h1>
-	<form th:action="@{/admin/movie}" method="POST" th:object="${movie}">
-		<div th:if="${#fields.hasGlobalErrors()}">
-			<p th:each="err : ${#fields.globalErrors()}" th:text="${err}">...</p>
-		</div>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+		crossorigin="anonymous"></script>
+	<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
 
-		<div>
-			<label>Titolo:</label>
-			<span><input type="text" th:field="${movie.title}" /></span>
-			<span th:if="${#fields.hasErrors('title')}" th:errors="*{title}">
-			</span>
-		</div>
+		<div class="container-fluid" style="max-width: 1500px;">
+			<a class="navbar-brand" href="/">SiwMovie</a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+				aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarScroll">
+				<ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="/">Home</a>
+					</li>
 
-		<div>
-			<label>Anno:</label> <span><input type="text" th:field="${movie.year}" /></span>
-			<span th:if="${#fields.hasErrors('year')}" th:errors="*{year}">
-			</span>
-		</div>
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+							aria-expanded="false">
+							FIlm
+						</a>
+						<ul class="dropdown-menu">
+							<li><a class="dropdown-item" href="/movies">Tutti i Film</a></li>
+							<li>
+								<hr class="dropdown-divider">
+							</li>
+							<li><a class="dropdown-item" href="#">Azione</a></li>
+							<li><a class="dropdown-item" href="#">Horror</a></li>
+						</ul>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/artists">Artisti</a>
+					</li>
+					
+				</ul>
 
-		<div>
-			<label>URL immagine:</label> <span><input type="text" th:field="${movie.urlImage}" /></span>
-		</div>
+				<form class="d-flex flex-grow-1" th:action="@{/searchMovies}" method="post"
+					style="margin-right: 100px; ">
+					<input class="form-control me-2" th:value="${year}" name="year" type="search"
+						placeholder="Cerca un film!" aria-label="Search">
+					<button class="btn btn-outline-success" type="submit">Cerca</button>
+				</form>
+				<div th:if="${#request.userPrincipal}" style="margin-left: 10%;">
+					<span>Ciao, </span>
+					<span th:text="${#request.userPrincipal.principal.username}"> </span>
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/logout">Logout</a></button>
+				</div>
+				<div th:unless="${#request.userPrincipal}">
+					<button class="btn btn-outline-success" type="submit"><a id="loginbutton"
+							href="/login">Login</a></button>
+				</div>
+			</div>
 
-		<div>
-			<span><button type="submit">Conferma</button></span>
 		</div>
-	</form>
+	</nav>
+
+
+
+	
+		
+		<div id="black-blurred"></div>
+		<div class="container my-5" id="movie">
+			<div class="flex-container-orizzontale">
+				<div class="flex-container-verticale">
+					<h1 style="padding-top: 5%;">Nuovo Film</h1>
+					
+				</div>
+
+
+			</div>
+
+			<div class="d-flex p-2 justify-content-between align-items-center">
+
+
+
+
+			</div>
+			<div class="container review">
+				<form th:action="@{/admin/newMovie}" method="POST" th:object="${movie}" enctype="multipart/form-data">
+					<div th:if="${#fields.hasGlobalErrors()}">
+						
+							<div class="alert alert-danger" role="alert" th:each="err : ${#fields.globalErrors()}" th:text="${err}">
+							A simple danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+						  </div>
+					</div>
+					<div class="mb-3">
+						<label for="title" class="form-label">Titolo</label>
+						<input th:if="${!#fields.hasErrors('title')}" type="text" class="form-control" id="title" th:field="*{title}" placeholder="">
+						<input th:if="${#fields.hasErrors('title')}" type="text" class="form-control is-invalid" id="title" th:field="*{title}" placeholder="">
+						<div class="invalid-feedback" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></div>
+					</div>
+					<div class="mb-3">
+						<label for="year" class="form-label">Anno</label>
+						<input th:if="${!#fields.hasErrors('year')}" class="form-control" rows="3" th:field="*{year}"></input>
+						<input th:if="${#fields.hasErrors('year')}" class="form-control is-invalid" rows="3" th:field="*{year}"></input>
+						<div class="invalid-feedback" th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></div>
+						
+						
+					</div>
+					<div class="mb-3">
+						<label for="exampleFormControlTextarea1" class="form-label">Regista</label>
+						<select class="form-select" id ="director" name="director" >
+						  <option selected>Seleziona un regista</option>
+						  
+						  <option th:each="director, directorStat : ${directors}" th:text="${director.name + ' ' + director.surname}" th:value="${director.id}" >Christopher Nolan</option>
+						</select>
+					  </div>
+					  <div class="mb-3">
+						<label for="formFile" class="form-label">Immagine locandina</label>
+						<input th:if="${!#fields.hasErrors('primaryImage')}" class="form-control" type="file" id="image" name="image" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*">
+						<input th:if="${#fields.hasErrors('primaryImage')}" class="form-control is-invalid" type="file" id="image" name="image" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*">
+						<div class="invalid-feedback" th:if="${#fields.hasErrors('year')}" th:errors="*{year}"></div>
+					  </div>
+					  <div class="mb-3">
+						<label for="formFile" class="form-label">Immagini film</label>
+						<input class="form-control" type="file" id="images" name="images" accept=".jpg, .png, .jpeg, .gif, .bmp, .tif, .tiff|image/*">
+						
+					  </div>
+					<div class="mb-3">
+						<button class="btn btn-primary" type="submit">Crea Film</button>
+					</div>
+				</form>
+			</div>
+			
+		</div>
+			
+	</div>
 </body>
 
 </html>
