--- a/src/main/resources/templates/admin/indexAdmin.html
+++ b/src/main/resources/templates/admin/indexAdmin.html
@@ -99,10 +99,14 @@
 						<h1>Operazioni Artisti</h1>
 					</div>
 					<div class="p-2">
-						<button type="button" class="btn btn-primary">Aggiungi Nuovo Attore</button>
+						<a href="/admin/addActor">
+							<button type="button" class="btn btn-primary">Aggiungi Nuovo Attore</button>
+						</a>
 					</div>
 					<div class="p-2">
-						<button type="button" class="btn btn-primary">Modifica Attore</button>
+						<a href="/admin/manageArtists">
+							<button type="button" class="btn btn-primary">Modifica Attore</button>
+						</a>
 					</div>
 				</div>
 			</div>
