--- a/src/main/resources/templates/admin/manageArtists.html
+++ b/src/main/resources/templates/admin/manageArtists.html
@@ -5,7 +5,7 @@
 	<title>
 		SiwMovie - Film
 	</title>
-	<link rel="stylesheet" href="/css/stile2.css" />
+	
 </head>
 
 <!DOCTYPE html>
@@ -15,6 +15,7 @@
 	 <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+	<link rel="stylesheet" href="/css/stile2.css" />
 </head>
 <body>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
@@ -67,49 +68,78 @@
 	</div>
   </nav>
 
-  <div class="container my-5">
-	<div class="container" id="siwimage"><img class="img-fluid" src="/images/logo-siw.png" style=""/></div>
+  <div class="container my-5" th:if="${!artists.isEmpty()}"  >
+	<h1 class="text-center" style="margin-bottom: 1em;">Artisti</h1>
+	<h1 class="text-center text-success" th:if="${operation}" style="margin-bottom: 1em;">Artista Cancellato!</h1>
 	
-	<div th:if="${!movies.isEmpty()}" class="container my-3">
-		<div class="row">
-			<div th:each="movie, movieStat : ${movies}" class="col-md-4 col-sm-6">
-			  <div class="card mb-3" style="max-width: 80%;">
-				<img th:src="${'\'+movie.primaryImage.imagePath}" th:if="${movie.primaryImage}" class="card-img-top " id="moviecard" alt="Movie Poster">
+	  
+	  
+	  
+	  <div class="row row-cols-1 row-cols-md-2 g-4">
+		<div class="card mb-3 text-bg-secondary border-primary" th:each="artist, artistStat : ${artists}" style="max-width: 540px;">
+			<div class="row g-0" >
+			  <div class="col-md-4" id="img-container">
+				<img id="artist-card" th:src="${'\'+artist.image.imagePath}" class="img-fluid rounded-circle"  alt="...">
+			  </div>
+			  
+			  <div class="col-md-8">
 				<div class="card-body">
-				  <h5 th:text="${movie.title}" class="card-title"></h5>
-				  <p th:text="${movie.year}" class="card-text"></p>
-				  <p th:text=" ${'Valutazione: '+movie.rating}" class="card-text">Valutazione: </p>
-				  <a th:href="@{|/movie/${movie.id}|}" class="btn btn-primary">Dettagli</a>
+				  <h5 class="card-title" th:text="${artist.name +' '+ artist.surname}">Nome artista</h5>
+				  <p class="card-text" th:text="${artist.biography}" >Bio</p>
+				  <a th:href="@{'/admin/formUpdateArtist' + '/' + ${artist.id}}" class="btn btn-primary">Aggiorna</a>
+				  <button type="button" class="btn btn-danger" data-bs-toggle="modal" th:data-bs-target="'#staticBackdrop-' + ${artist.id}">
+					Cancella
+				  </button>
 				</div>
 			  </div>
 			</div>
+			<div class="modal fade " th:id="'staticBackdrop-' + ${artist.id}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+				<div class="modal-dialog">
+				  <div class="modal-content">
+					<div class="modal-header">
+					  <h1 class="modal-title fs-5" id="staticBackdropLabel">Conferma Operazione</h1>
+					  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+					</div>
+					<div class="modal-body">
+					  Sei sicuro di voler cancellare definitivamente questo artista?
+					</div>
+					<div class="modal-footer">
+					 
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+					  <a th:href="@{'/admin/deleteArtist' + '/' + ${artist.id}}"><button type="button" class="btn btn-danger">Conferma</button></a>
+					</div>
+				  </div>
+				</div>
+			  </div>
 		  </div>
-		  
-		  
-		  
-	  </div>	  
+	  </div>
+	  
+	  
 	  <nav aria-label="Page navigation example">
 		<ul class="pagination justify-content-center">
 		  <li class="page-item">
 			<a th:if="${page == 1}"class="page-link disabled" href="#" aria-label="Previous">
 			  <span aria-hidden="true">&laquo;</span>
 			</a>
-			<a th:unless="${page == 1}"class="page-link" th:href="@{|/movies/${page-1}|}" aria-label="Previous">
+			<a th:unless="${page == 1}"class="page-link" th:href="@{|/admin/manageArtists/${page-1}|}" aria-label="Previous">
 				<span aria-hidden="true">&laquo;</span>
 			  </a>
 		  </li>
-		  <li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}" th:text="${i+1}" class="page-link active" th:href="@{|/movies/${i+1}|}"></a>
-			<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/movies/${i+1}|}"></a></li>
+		  <li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}" th:text="${i+1}" class="page-link active" th:href="@{|/admin/manageArtists/${i+1}|}"></a>
+			<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/admin/manageArtists/${i+1}|}"></a></li>
 		  <li class="page-item">
 			<a th:if="${page == pages}"class="page-link disabled" href="#" aria-label="Previous">
 				<span aria-hidden="true">&raquo;</span>
 			  </a>
-			  <a th:unless="${page == pages}"class="page-link" th:href="@{|/movies/${page+1}|}" aria-label="Next">
+			  <a th:unless="${page == pages}"class="page-link" th:href="@{|/admin/manageArtists/${page+1}|}" aria-label="Next">
 				  <span aria-hidden="true">&raquo;</span>
 				</a>
 		  </li>
 		</ul>
-	  </nav>
+	  </nav> 
+	  
+  </div>
+
 </body>
 
 </html>
