--- a/src/main/resources/templates/artists.html
+++ b/src/main/resources/templates/artists.html
@@ -95,7 +95,28 @@
 	  
 	  
 	  
-	  
+	  <nav aria-label="Page navigation example">
+		<ul class="pagination justify-content-center">
+		  <li class="page-item">
+			<a th:if="${page == 1}"class="page-link disabled" href="#" aria-label="Previous">
+			  <span aria-hidden="true">&laquo;</span>
+			</a>
+			<a th:unless="${page == 1}"class="page-link" th:href="@{|/artists/${page-1}|}" aria-label="Previous">
+				<span aria-hidden="true">&laquo;</span>
+			  </a>
+		  </li>
+		  <li th:each="i : ${#numbers.sequence(0, pages-1)}" class="page-item"><a th:if="${page == i+1}" th:text="${i+1}" class="page-link active" th:href="@{|/artists/${i+1}|}"></a>
+			<a th:unless="${page == i+1}" th:text="${i+1}" class="page-link" th:href="@{|/artists/${i+1}|}"></a></li>
+		  <li class="page-item">
+			<a th:if="${page == pages}"class="page-link disabled" href="#" aria-label="Previous">
+				<span aria-hidden="true">&raquo;</span>
+			  </a>
+			  <a th:unless="${page == pages}"class="page-link" th:href="@{|/artists/${page+1}|}" aria-label="Next">
+				  <span aria-hidden="true">&raquo;</span>
+				</a>
+		  </li>
+		</ul>
+	  </nav> 
   </div>
 
 </body>
