Inizio form nuovo artista

--- a/src/main/resources/templates/admin/indexAdmin.html
+++ b/src/main/resources/templates/admin/indexAdmin.html
@@ -99,7 +99,7 @@
 						<h1>Operazioni Artisti</h1>
 					</div>
 					<div class="p-2">
-						<a href="/admin/addActor">
+						<a href="/admin/formNewArtist">
 							<button type="button" class="btn btn-primary">Aggiungi Nuovo Attore</button>
 						</a>
 					</div>
