--- a/src/main/resources/templates/artist.html
+++ b/src/main/resources/templates/artist.html
@@ -69,13 +69,13 @@
   </nav>
  
   <div th:if="${artist}"  id="movie-container" style="padding-top: 2em;">
-	<div id="blurred" th:style="'background-image: url(/'+${artist.image.imagePath}+');'" ></div>
+	<div th:if="${artist.image}" id="blurred" th:style="'background-image: url(/'+${artist.image.imagePath}+');'" ></div>
 	<div id="black-blurred"></div>
 	<div class="container my-5" id="movie">
 	  <h1 th:text="${artist.name}">Christopher</h1>
 	  <h2 th:text="${artist.surname}">Nolan</h2>
 	  <div class="d-flex p-2">
-		<img class="img-fluid flex-item" id="movie-image" th:src="${'/'+artist.image.imagePath} "style="margin-left:0px;">
+		<img th:if="${artist.image}" class="img-fluid flex-item" id="movie-image" th:src="${'/'+artist.image.imagePath} "style="margin-left:0px;">
 	  <div style="padding-left: 2%;">
 		<h1>Bio</h1>
 		<p class="lead " th:text="${artist.biography}"></p>
